--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "template" ,
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bson-objectid": "^2.0.4",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "fs.promises": "^0.1.2",
+    "morgan": "1.10.0",
+    "path": "^0.12.7",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
