--- a/package.json
+++ b/package.json
@@ -9,17 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
-    "bson-objectid": "^2.0.4",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
-    "fs.promises": "^0.1.2",
     "joi": "^17.6.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
+    "mongoose": "^7.5.3",
     "morgan": "1.10.0",
-    "path": "^0.12.7"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
