--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
-    "express": "4.17.1",
-    "joi": "^17.6.0",
-    "mongoose": "^7.5.3",
+    "express": "4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.4.2",
     "morgan": "1.10.0",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
